data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000172_8f6f5977-d057-4291-83b1-1310ac9e91a4.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 8f6f5977-d057-4291-83b1-1310ac9e91a4
- repo: psf/requests
- instance_id: psf__requests-2317
- base_commit: 091991be0da19de9108dbe5e3752917fea3d7fdc
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
method = builtin_str(method) problem
In requests/sessions.py is a command:

method = builtin_str(method)
Converts method from
b’GET’
to
"b'GET’"

Which is the literal string, no longer a binary string.  When requests tries to use the method "b'GET’”, it gets a 404 Not Found response.

I am using python3.4 and python-neutronclient (2.3.9) with requests (2.4.3).  neutronclient is broken because it uses this "args = utils.safe_encode_list(args)" command which converts all the values to binary string, including method.

I'm not sure if this is a bug with neutronclient or a bug with requests, but I'm starting here.  Seems if requests handled the method value being a binary string, we wouldn't have any problem.

Also, I tried in python2.6 and this bug doesn't exist there. Some difference between 2.6 and 3.4 makes this not work right.

FILES INSPECTED
---------------
- requests/sessions.py [Read: 1]
- requests/compat.py [Read: 1]
- requests [Grep: 1]
- requests/utils.py [Grep: 2]

SEARCH ANCHORS
--------------
- [6] Grep pattern='def to_native_string' path='requests'
- [8] Grep pattern='def to_native_string' path='requests/utils.py'
- [10] Grep pattern='def to_native_string' path='requests/utils.py'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find ./swebench_9_15 -type d -name "requests" | head -5
- [test] cd ./swebench_9_15 && python test_fix.py
- [test] cd ./swebench_9_15 && python test_fix.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
(none)

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Read Result after action #2]
       1→# -*- coding: utf-8 -*-
       2→
       3→"""
       4→requests.session
       5→~~~~~~~~~~~~~~~~
       6→
       7→This module provides a Session object to manage and persist settings across
       8→requests (cookies, auth, proxies).
       9→
      10→"""
      11→import os
      12→from collections import Mapping
      13→from datetime import datetime
      14→
      15→from .auth import _basic_auth_str
      16→from .compat import cookielib, OrderedDict, urljoin, urlparse, builtin_str
      17→from .cookies import (
      18→    cookiejar_from_dict, extract_cookies_to_jar, RequestsCookieJar, merge_cookies)
      19→from .models import Request, PreparedRequest, DEFAULT_REDIRECT_LIMIT
      20→from .hooks import default_hooks, dispatch_hook
      21→from .utils import to_key_val_list, default_headers, to_native_string
      22→from .exceptions import (
      23→    TooManyRedirects, InvalidSchema, ChunkedEncodingError, ContentDecodingError)
      24→from .structures import CaseInsensitiveDict
      25→
      26→from .adapters import HTTPAdapter
      27→
      28→from .utils import (
      29→    requote_uri, get_environ_proxies, get_netrc_auth, should_bypass_proxies,
      30→    get_auth_from_url
      31→)
      32→
      33→from
  [... truncated ...]
- [Read Result after action #4]
       1→# -*- coding: utf-8 -*-
       2→
       3→"""
       4→pythoncompat
       5→"""
       6→
       7→from .packages import chardet
       8→
       9→import sys
      10→
      11→# -------
      12→# Pythons
      13→# -------
      14→
      15→# Syntax sugar.
      16→_ver = sys.version_info
      17→
      18→#: Python 2.x?
      19→is_py2 = (_ver[0] == 2)
      20→
      21→#: Python 3.x?
      22→is_py3 = (_ver[0] == 3)
      23→
      24→#: Python 3.0.x
      25→is_py30 = (is_py3 and _ver[1] == 0)
      26→
      27→#: Python 3.1.x
      28→is_py31 = (is_py3 and _ver[1] == 1)
      29→
      30→#: Python 3.2.x
      31→is_py32 = (is_py3 and _ver[1] == 2)
      32→
      33→#: Python 3.3.x
      34→is_py33 = (is_py3 and _ver[1] == 3)
      35→
      36→#: Python 3.4.x
      37→is_py34 = (is_py3 and _ver[1] == 4)
      38→
      39→#: Python 2.7.x
      40→is_py27 = (is_py2 and _ver[1] == 7)
      41→
      42→#: Python 2.6.x
      43→is_py26 = (is_py2 and _ver[1] == 6)
      44→
      45→#: Python 2.5.x
      46→is_py25 = (is_py2 and _ver[1] == 5)
      47→
      48→#: Python 2.4.x
      49→is_py24 = (is_py2 and _ver[1] == 4)   # I'm assuming this is not by choice.
      50→
      51→
      52→# ---------
      53→# Platforms
      54→# ---------
      55→
      56→
      57→# S
  [... truncated ...]
- [Grep Result after action #6]
  Found 1 file
  requests/utils.py
- [Grep Result after action #8]
  655:def to_native_string(string, encoding='ascii'):
  656-    """
  657-    Given a string object, regardless of type, returns a representation of that
  658-    string in the native string type, encoding and decoding where necessary.
  659-    This assumes ASCII unless told otherwise.
  660-    """
  661-    out = None
  662-
  663-    if isinstance(string, builtin_str):
  664-        out = string
  665-    else:
- [Grep Result after action #10]
  655:def to_native_string(string, encoding='ascii'):
  656-    """
  657-    Given a string object, regardless of type, returns a representation of that
  658-    string in the native string type, encoding and decoding where necessary.
  659-    This assumes ASCII unless told otherwise.
  660-    """
  661-    out = None
  662-
  663-    if isinstance(string, builtin_str):
  664-        out = string
  665-    else:
  666-        if is_py2:
  667-            out = string.encode(encoding)
  668-        else:
  669-            out = string.decode(encoding)
  670-
  671-    return out
  672-
  673-
  674-def urldefragauth(url):
  675-    """
- [Test Output after action #14]
  Exit code 1
    File "test_fix.py", line 13
      print(f"Test 1 - String input: '{method1}' -> '{result1}'")
                                                               ^
  SyntaxError: invalid syntax
- [Test Output after action #17]
  Test 1 - String input: 'GET' -> 'GET'
  Test 2 - Bytes input: GET -> 'GET'
  Test 3 - Bytes input: POST -> 'POST'

  All tests passed! The fix correctly handles both string and bytes inputs.

SOURCE EDIT EVIDENCE
--------------------
- requests/sessions.py
  Tool: Edit action #12
  old_text_sha256: 5aa67996b350984b107bb71f4b7cd0938ec63aec1b20fa341f30954f91dfbe8e
  new_text_sha256: fb3300eb09db5285d0f820c37342ebf8655ee62e85bfe8e4f96e18d3351f56a7
- swebench_9_15/test_fix.py
  Tool: Write action #13
  new_text_sha256: 50ebd73866c2a484fa9f0d9a8db1426307b1dd4370448a31c9cda4836abfa90a
- swebench_9_15/test_fix.py
  Tool: Edit action #16
  old_text_sha256: 889022afd3d3d0fc0bfc2e9960f449d7aabee812ab019c299dbf6e5925c575ca
  new_text_sha256: 873e82ab126150eaf67f6718d7fcee4b35906779dea6856195c3dd1d98e55830

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
